--- a/BG-Removal Project/server/vercel.json
+++ b/BG-Removal Project/server/vercel.json
@@ -7,6 +7,6 @@
     }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "server.js" }
+    { "src": "/(.*)", "dest": "BG-Removal Project/server.js" }
   ]
 }
