--- a/BG-Removal Project/server/vercel.json
+++ b/BG-Removal Project/server/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
   "functions": {
-    "api/server.js": {
+    "server.js": {
       "includeFiles": "dist/**"
     }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "/api/server.js" }
+    { "src": "/(.*)", "dest": "server.js" }
   ]
 }
