--- a/BG-Removal-Project/server/.env
+++ b/BG-Removal-Project/server/.env
@@ -1,1 +1,2 @@
-MONGODB_URI = 'mongodb+srv://BG-Removal:Database@cluster0.1w45fkw.mongodb.net/'
+MONGODB_URI = 'mongodb+srv://tanesh8409_db_user:Database@cluster0.jvj8prw.mongodb.net'
+CLERK_WEBHOOK_SECRET = 'whsec_twmSpd2tXxQY0vt7sjBhwTCqfKglIDdr'
