--- a/BG-Removal-Project/server/.env
+++ b/BG-Removal-Project/server/.env
@@ -1,2 +1,2 @@
-MONGODB_URI = 'mongodb+srv://tanesh8409_db_user:Database@cluster0.jvj8prw.mongodb.net'
+MONGODB_URI = 'mongodb+srv://tanesh8409_db_user:Database@cluster0.jvj8prw.mongodb.net/'
 CLERK_WEBHOOK_SECRET = 'whsec_twmSpd2tXxQY0vt7sjBhwTCqfKglIDdr'
