--- a/BG-Removal-Project/client/package.json
+++ b/BG-Removal-Project/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.53.3",
     "@tailwindcss/vite": "^4.1.15",
+    "axios": "^1.13.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
